--- a/MiPrimeraAplicacionEnNetCore/MiPrimeraAplicacionEnNetCore.csproj
+++ b/MiPrimeraAplicacionEnNetCore/MiPrimeraAplicacionEnNetCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.8.3" />
+    <PackageReference Include="itext7" Version="7.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="19.4.0.38" />
   </ItemGroup>
 
 </Project>
